# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  entities.json  entities.txt  main.cc  main.cpp  test.cpp
docs/diagrams/src/: class_diagram.wsd
entities/: BigScene1440pAA1.txt  BigSceneRef1440pAA1.txt  MirrorRoom.txt  Snowman.txt
include/: HalfSpace.hpp  JsonSerialization.hpp  LightIntensity.hpp  LightSource.hpp  PrimitiveObject.hpp  Ray.hpp  Scene.hpp  SceneEntity.hpp  Screen.hpp  Sphere.hpp  box.h  disk.h  halfspace.h  json_serialization.h  light_intensity.h  light_source.h  primitive_object.h  ray.h  scene.h  scene_entity.h  screen.h  sphere.h  unittest.hpp
json_entities/: BigScene1440pAA1.json  BigSceneRef1440pAA1.json  MirrorRoom.json  Snowman.json
src/: HalfSpace.cpp  LightIntensity.cpp  LightSource.cpp  PrimitiveObject.cpp  Ray.cpp  Scene.cpp  SceneEntity.cpp  Screen.cpp  Sphere.cpp  box.cc  disk.cc  halfspace.cc  light_intensity.cc  light_source.cc  primitive_object.cc  ray.cc  scene.cc  scene_entity.cc  screen.cc  sphere.cc  unittest.cpp
statusbar/: CmakeLists.txt
